...
                      seeOnlyPRO)
                })
          }
          Box(
              modifier =
                  Modifier.height(BUTTON_HEIGHT_SM.dp)
                      .testTag("segmentedButtonRow")
                      .fillMaxWidth()
                      .padding(horizontal = STANDARD_PADDING.dp)
                      .background(Color.Transparent)) {
                MultiChoiceSegmentedButtonRow(
                    modifier = Modifier.fillMaxWidth().background(Color.Transparent)) {
                      options.forEachIndexed { index, label ->
...
                  if (checkedList.isEmpty()) {
                    Text(
                        text = "There is no activity yet.",
                        modifier =
                            Modifier.padding(STANDARD_PADDING.dp)
                                .align(Alignment.Center)
                                .testTag("emptyActivityPrompt"),
                        color = MaterialTheme.colorScheme.onSurface)
                  } else {
                    Text(
                        text = "There is no activity of these categories yet.",
                        modifier =
                            Modifier.padding(STANDARD_PADDING.dp)
                                .align(Alignment.Center)
                                .testTag("emptyActivityPrompt"),
                        color = MaterialTheme.colorScheme.onSurface)
                  }
...
                        }
                      }
                  LazyColumn(
                      modifier =
                          Modifier.fillMaxSize()
                              .padding(horizontal = STANDARD_PADDING.dp)
                              .testTag("lazyColumn")
                              .background(Color(MAIN_BACKGROUND)),
                      verticalArrangement = Arrangement.spacedBy(MEDIUM_PADDING.dp)) {
                        // Use LazyColumn to efficiently display the list of activities

                        items(filteredActivities) { activity ->
                          if (activity.participants.size < activity.maxPlaces) {
...
        mutableStateOf(profile?.likedActivities?.contains(activity.uid) ?: false)
      }

  Card(
      modifier =
          Modifier.fillMaxWidth()
              .testTag("activityCard")
              .clip(RoundedCornerShape(MEDIUM_PADDING.dp))
              .clickable {
                listActivitiesViewModel.selectActivity(activity)
                navigationActions.navigateTo(Screen.ACTIVITY_DETAILS)
              },
      elevation = CardDefaults.cardElevation(STANDARD_PADDING.dp)) {
...
                        .padding(MEDIUM_PADDING.dp)
                        .testTag("titleActivity"))
            Row(
                modifier =
                    Modifier.align(Alignment.TopEnd)
                        .padding(SMALL_PADDING.dp)
                        .testTag("activityStatusAndInterests")
                        .fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically) {
                  DisplayInterests(activity)

                  if (profile != null) {
...
                Text(
                    text = formattedDate,
                    style =
                        MaterialTheme.typography.bodySmall.copy(
                            color = Color.Black, // Light gray color for the date
                            fontStyle = FontStyle.Italic),
                    modifier = Modifier.weight(1f).testTag("dateText") // Takes up remaining space
                    )

                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    horizontalArrangement = Arrangement.spacedBy(MEDIUM_PADDING.dp),
                    modifier = Modifier.wrapContentWidth() // Ajuste sa largeur au contenu
...
                        Spacer(modifier = Modifier.width(SMALL_PADDING.dp))
                        Text(
                            text = if (activity.price == 0.0) "Free" else "${activity.price}CHF",
                            style =
                                MaterialTheme.typography.bodySmall.copy(
                                    color = Color.Gray, fontStyle = FontStyle.Italic),
                            modifier = Modifier.testTag("priceText"))
                      }

                      // Bouton "Like"
                      if (profile != null) {
                        IconButton(
                            onClick = {
...
                            },
                            modifier = Modifier.testTag("likeButton${isLiked.value}")) {
                              Icon(
                                  imageVector =
                                      if (isLiked.value) Icons.Filled.Favorite
                                      else Icons.Outlined.FavoriteBorder,
                                  contentDescription = if (isLiked.value) "Liked" else "Not Liked",
                                  tint = Color(PRIMARY_COLOR))
                            }
                      }
                    }
              }

...
                            } else "",
                    style =
                        MaterialTheme.typography.bodySmall.copy(
                            fontStyle = FontStyle.Italic, color = Color.Black),
                    modifier =
                        Modifier.weight(1f)
                            .testTag("locationAndDistanceText") // Takes up remaining space
                    )
                DisplayIcon(Icons.Filled.Groups, "participants")

                Spacer(modifier = Modifier.width(SMALL_PADDING.dp))

                Text(
...
                            fontWeight = FontWeight.SemiBold,
                            color = Color.Black,
                            fontSize = MEDIUM_PADDING.sp),
                    modifier =
                        Modifier.align(Alignment.CenterVertically)
                            .padding(end = MEDIUM_PADDING.dp)
                            .testTag("participantsText"))
              }

          Spacer(modifier = Modifier.height(SMALL_PADDING.dp))

          // Display the activity description
          Text(
              text = activity.description,
              style =
                  MaterialTheme.typography.bodyMedium.copy(color = Color.Black, lineHeight = 20.sp),
              maxLines = 3,
              overflow = TextOverflow.Ellipsis, // add "..." when description is too long
              modifier =
                  Modifier.padding(horizontal = MEDIUM_PADDING.dp).testTag("descriptionText"))
          Spacer(modifier = Modifier.height(STANDARD_PADDING.dp))
        }
      }
}

@Composable
...
    return
  }

  Box(
      modifier =
          Modifier.padding(STANDARD_PADDING.dp)
              .testTag("interestPresent")
              .background(
                  CategoryColorMap[activity.category] ?: Color.Gray,
                  shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))
              .padding(horizontal = SMALL_PADDING.dp, vertical = SMALL_PADDING.dp),
  ) {
    Text(
...
