...
import com.google.firebase.Timestamp
import java.util.Calendar
import java.util.GregorianCalendar
import java.util.UUID

val timestamp = Timestamp.now()
val location = Location(46.519962, 6.633597, "EPFL", "Ecole Polytechnique Fédérale de Lausanne")
val location2 = Location(46.5, 6.6, "Lausanne", "Lausanne, Vaud")
val locationList = listOf(location, location2)
val interest1 = Interest("Reading", Category.ENTERTAINMENT)
val interest2 = Interest("Hiking", Category.SPORT)
val interest3 = listOf(interest1, interest2)
val activity =
...
        photo = null,
        likedActivities = listOf())

val activityBiking =
    Activity(
        uid = "1",
        title = "Mountain Biking",
        description = "Exciting mountain biking experience.",
        date = Timestamp(GregorianCalendar(2050, Calendar.JANUARY, 1).time),
        location =
            Location(46.519962, 6.633597, "EPFL", "Ecole Polytechnique Fédérale de Lausanne"),
        creator = "Chris",
        images = listOf(),
        price = 10.0,
...
