...
data class Interest(val name: String, val category: Category)

val interestStringValues =
    mapOf(
        categories[0] to
            listOf( // Sport
                "Basketball",
                "Cycling",
                "Football",
                "Running",
                "Swimming",
                "Tennis",
                "Volleyball",
...
