...
              Icons.Sharp.FilterList,
              contentDescription = "Filter Activities",
              tint = Color(PRIMARY_COLOR))
        }
      },
      modifier =
          Modifier.testTag("searchBar")
              .clip(shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp))
              .fillMaxWidth()
              .padding(STANDARD_PADDING.dp)
              .background(Color(MAIN_BACKGROUND_BUTTON)),
      shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
      colors = OutlinedTextFieldDefaults.colors(focusedBorderColor = Color(MAIN_COLOR_DARK)),
...
